--- a/automation/add_balancer.yml
+++ b/automation/add_balancer.yml
@@ -10,6 +10,10 @@
       ansible.builtin.include_vars: "vars/main.yml"
       tags: always
 
+    - name: Include vault variables
+      ansible.builtin.include_vars: "vars/vault.yml"
+      tags: always
+
     - name: Include system variables
       ansible.builtin.include_vars: "vars/system.yml"
       tags: always
@@ -132,6 +136,10 @@
   pre_tasks:
     - name: Include main variables
       ansible.builtin.include_vars: "vars/main.yml"
+      tags: always
+
+    - name: Include vault variables
+      ansible.builtin.include_vars: "vars/vault.yml"
       tags: always
 
     - name: Include system variables
