--- a/automation/config_pgcluster.yml
+++ b/automation/config_pgcluster.yml
@@ -7,6 +7,10 @@
     - name: Include main variables
       ansible.builtin.include_vars: "vars/main.yml"
       tags: always
+
+    - name: Include vault variables
+      ansible.builtin.include_vars: "vars/vault.yml"
+      tags: always
     # set_fact: 'pgbackrest_install' to configure Postgres backups (TODO: Add the ability to configure backups in the UI)
     # Note: Applicable only for "aws", "gcp", "azure", because:
     # "digitalocean" - requires the Spaces access keys ("AWS_ACCESS_KEY_ID" and "AWS_SECRET_ACCESS_KEY" variables)
@@ -34,6 +38,10 @@
   pre_tasks:
     - name: Include main variables
       ansible.builtin.include_vars: "vars/main.yml"
+
+    - name: Include vault variables
+      ansible.builtin.include_vars: "vars/vault.yml"
+      tags: always
 
     - name: Include system variables
       ansible.builtin.include_vars: "vars/system.yml"
@@ -126,6 +134,10 @@
       ansible.builtin.include_vars: "vars/main.yml"
       tags: always
 
+    - name: Include vault variables
+      ansible.builtin.include_vars: "vars/vault.yml"
+      tags: always
+
     - name: Include system variables
       ansible.builtin.include_vars: "vars/system.yml"
       tags: always
@@ -216,6 +228,10 @@
       ansible.builtin.include_vars: "vars/main.yml"
       tags: always
 
+    - name: Include vault variables
+      ansible.builtin.include_vars: "vars/vault.yml"
+      tags: always
+
     - name: Include OS-specific variables
       ansible.builtin.include_vars: "vars/{{ ansible_os_family }}.yml"
       tags: always
@@ -244,6 +260,10 @@
   pre_tasks:
     - name: Include main variables
       ansible.builtin.include_vars: "vars/main.yml"
+      tags: always
+
+    - name: Include vault variables
+      ansible.builtin.include_vars: "vars/vault.yml"
       tags: always
 
     - name: Include OS-specific variables
@@ -295,6 +315,10 @@
   pre_tasks:
     - name: Include main variables
       ansible.builtin.include_vars: "vars/main.yml"
+      tags: always
+
+    - name: Include vault variables
+      ansible.builtin.include_vars: "vars/vault.yml"
       tags: always
 
     - name: Include OS-specific variables
@@ -353,6 +377,10 @@
   pre_tasks:
     - name: Include main variables
       ansible.builtin.include_vars: "vars/main.yml"
+      tags: always
+
+    - name: Include vault variables
+      ansible.builtin.include_vars: "vars/vault.yml"
       tags: always
 
     - name: Include system variables
