--- a/automation/pg_upgrade.yml
+++ b/automation/pg_upgrade.yml
@@ -10,7 +10,8 @@
   pre_tasks:
     - name: Include main variables
       ansible.builtin.include_vars: "vars/main.yml"
-
+    - name: Include vault variables
+      ansible.builtin.include_vars: "vars/vault.yml"
     - name: Include upgrade variables
       ansible.builtin.include_vars: "vars/upgrade.yml"
 
@@ -66,6 +67,8 @@
   pre_tasks:
     - name: Include main variables
       ansible.builtin.include_vars: "vars/main.yml"
+    - name: Include vault variables
+      ansible.builtin.include_vars: "vars/vault.yml"
     - name: Include OS-specific variables
       ansible.builtin.include_vars: "vars/{{ ansible_os_family }}.yml"
     - name: Include upgrade variables
@@ -89,6 +92,8 @@
   pre_tasks:
     - name: Include main variables
       ansible.builtin.include_vars: "vars/main.yml"
+    - name: Include vault variables
+      ansible.builtin.include_vars: "vars/vault.yml"
     - name: Include OS-specific variables
       ansible.builtin.include_vars: "vars/{{ ansible_os_family }}.yml"
     - name: Include upgrade variables
@@ -112,6 +117,8 @@
   pre_tasks:
     - name: Include main variables
       ansible.builtin.include_vars: "vars/main.yml"
+    - name: Include vault variables
+      ansible.builtin.include_vars: "vars/vault.yml"
     - name: Include OS-specific variables
       ansible.builtin.include_vars: "vars/{{ ansible_os_family }}.yml"
     - name: Include upgrade variables
@@ -152,6 +159,8 @@
   pre_tasks:
     - name: Include main variables
       ansible.builtin.include_vars: "vars/main.yml"
+    - name: Include vault variables
+      ansible.builtin.include_vars: "vars/vault.yml"
     - name: Include OS-specific variables
       ansible.builtin.include_vars: "vars/{{ ansible_os_family }}.yml"
     - name: Include upgrade variables
@@ -174,6 +183,8 @@
   pre_tasks:
     - name: Include main variables
       ansible.builtin.include_vars: "vars/main.yml"
+    - name: Include vault variables
+      ansible.builtin.include_vars: "vars/vault.yml"
     - name: Include OS-specific variables
       ansible.builtin.include_vars: "vars/{{ ansible_os_family }}.yml"
     - name: Include upgrade variables
@@ -237,6 +248,8 @@
   pre_tasks:
     - name: Include main variables
       ansible.builtin.include_vars: "vars/main.yml"
+    - name: Include vault variables
+      ansible.builtin.include_vars: "vars/vault.yml"
     - name: Include OS-specific variables
       ansible.builtin.include_vars: "vars/{{ ansible_os_family }}.yml"
     - name: Include upgrade variables
