--- a/automation/pg_upgrade_rollback.yml
+++ b/automation/pg_upgrade_rollback.yml
@@ -12,6 +12,8 @@
   pre_tasks:
     - name: Include main variables
       ansible.builtin.include_vars: "vars/main.yml"
+    - name: Include vault variables
+      ansible.builtin.include_vars: "vars/vault.yml"
     - name: Include upgrade variables
       ansible.builtin.include_vars: "vars/upgrade.yml"
   tasks:
@@ -42,6 +44,8 @@
   pre_tasks:
     - name: Include main variables
       ansible.builtin.include_vars: "vars/main.yml"
+    - name: Include vault variables
+      ansible.builtin.include_vars: "vars/vault.yml"
     - name: Include OS-specific variables
       ansible.builtin.include_vars: "vars/{{ ansible_os_family }}.yml"
     - name: Include upgrade variables
