--- a/automation/update_pgcluster.yml
+++ b/automation/update_pgcluster.yml
@@ -9,6 +9,9 @@
     - name: Include main variables
       ansible.builtin.include_vars: "vars/main.yml"
       tags: always
+    - name: Include vault variables
+      ansible.builtin.include_vars: "vars/vault.yml"
+      tags: always
   tasks:
     - name: "[Prepare] Get Patroni Cluster Leader Node"
       ansible.builtin.uri:
@@ -58,6 +61,8 @@
       ansible.builtin.include_vars: "roles/update/vars/main.yml"
     - name: Include main variables
       ansible.builtin.include_vars: "vars/main.yml"
+    - name: Include vault variables
+      ansible.builtin.include_vars: "vars/vault.yml"
     - name: Include OS-specific variables
       ansible.builtin.include_vars: "vars/{{ ansible_os_family }}.yml"
   tasks:
@@ -90,6 +95,8 @@
       ansible.builtin.include_vars: "roles/update/vars/main.yml"
     - name: Include main variables
       ansible.builtin.include_vars: "vars/main.yml"
+    - name: Include vault variables
+      ansible.builtin.include_vars: "vars/vault.yml"
     - name: Include OS-specific variables
       ansible.builtin.include_vars: "vars/{{ ansible_os_family }}.yml"
   tasks:
@@ -146,6 +153,8 @@
       ansible.builtin.include_vars: "roles/update/vars/main.yml"
     - name: Include main variables
       ansible.builtin.include_vars: "vars/main.yml"
+    - name: Include vault variables
+      ansible.builtin.include_vars: "vars/vault.yml"
     - name: Include OS-specific variables
       ansible.builtin.include_vars: "vars/{{ ansible_os_family }}.yml"
   tasks:
@@ -206,6 +215,8 @@
       ansible.builtin.include_vars: "roles/update/vars/main.yml"
     - name: Include main variables
       ansible.builtin.include_vars: "vars/main.yml"
+    - name: Include vault variables
+      ansible.builtin.include_vars: "vars/vault.yml"
     - name: Include OS-specific variables
       ansible.builtin.include_vars: "vars/{{ ansible_os_family }}.yml"
   tasks:
